[package]
name = "my_parser_hVpo32Dds"
version = "0.1.2"
edition = "2021"
description = "Education purpose to implement of simple parser by using external creat"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peg = "0.8.2"
